--- a/index.html
+++ b/index.html
@@ -7,5 +7,62 @@
     <link rel="stylesheet" href="assets/styles/normalize.css" />
     <link rel="stylesheet" href="assets/styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <span>GlobalTalk</span>
+    </header>
+    <nav>
+      <div>
+        <ul>
+          <li>Main</li>
+          <li>Guide</li>
+          <li>statistics</li>
+          <li>Games</li>
+          <li>About</li>
+        </ul>
+      </div>
+      <div>
+        <button>Login</button>
+        <button>Sign Up</button>
+      </div>
+    </nav>
+    <main>
+        <section>
+      <div>
+        <div>
+          <span>E-COURSE PLATFORM</span>
+          <h1>Learning english online, made easy.</h1>
+          <p>
+            Practice your English and learn new things with the our platform
+          </p>
+        </div>
+        <div>
+          <button>Sign in</button>
+          <a href="/">Learn more</a>
+        </div>
+        <div>
+          <div>
+            <img src="assets/images/Vector.svg" alt="lighting/svg" />
+            <span>600</span>
+            <span>+</span>
+            <span>Popular words</span>
+          </div>
+          <div>
+            <img src="assets/images/Frame 35271.svg" alt="gaming joystick" />
+            <span>2</span>
+            <span>+</span>
+            <span>Mini-Game</span>
+          </div>
+        </div>
+        <div>
+          <img src="assets/images/image 6.png" alt="backgroung plant" />
+          <img
+            src="assets/images/casual-life-3d-boy-sitting-at-the-desk-with-open-book 9.png"
+            alt="lying boy" />
+          <img src="assets/images/image 12.png" alt="frontend plant" />
+        </div>
+      </div>
+      d
+    </main>
+  </body>
 </html>
