section 2 html layout

--- a/index.html
+++ b/index.html
@@ -27,42 +27,63 @@
       </div>
     </nav>
     <main>
-        <section>
-      <div>
+      <section>
         <div>
-          <span>E-COURSE PLATFORM</span>
-          <h1>Learning english online, made easy.</h1>
-          <p>
-            Practice your English and learn new things with the our platform
-          </p>
+          <div>
+            <span>E-COURSE PLATFORM</span>
+            <h1>Learning english online, made easy.</h1>
+            <p>
+              Practice your English and learn new things with the our platform
+            </p>
+          </div>
+          <div>
+            <button>Sign in</button>
+            <a href="/">Learn more</a>
+          </div>
+          <div>
+            <div>
+              <img src="assets/images/Vector.svg" alt="lighting/svg" />
+              <span>600</span>
+              <span>+</span>
+              <span>Popular words</span>
+            </div>
+            <div>
+              <img src="assets/images/Frame 35271.svg" alt="gaming joystick" />
+              <span>2</span>
+              <span>+</span>
+              <span>Mini-Game</span>
+            </div>
+          </div>
+          <div>
+            <img src="assets/images/image 6.png" alt="backgroung plant" />
+            <img
+              src="assets/images/casual-life-3d-boy-sitting-at-the-desk-with-open-book 9.png"
+              alt="lying boy" />
+            <img src="assets/images/image 12.png" alt="frontend plant" />
+          </div>
         </div>
+      </section>
+      <section>
         <div>
-          <button>Sign in</button>
-          <a href="/">Learn more</a>
+          <img src="assets/images/image 8.png" alt="" />
         </div>
         <div>
           <div>
-            <img src="assets/images/Vector.svg" alt="lighting/svg" />
-            <span>600</span>
-            <span>+</span>
-            <span>Popular words</span>
+            <h2>Learn a language in a playful way</h2>
+            <p>Make learning words more fun with mini-games</p>
           </div>
           <div>
-            <img src="assets/images/Frame 35271.svg" alt="gaming joystick" />
-            <span>2</span>
-            <span>+</span>
-            <span>Mini-Game</span>
+            <div>
+              <img src="assets/images/image 10.svg" alt="snickers" />
+              <span>Sprint →</span>
+            </div>
+            <div>
+              <img src="assets/images/image 11.svg" alt="megaphone" />
+              <span>Audio-call →</span>
+            </div>
           </div>
         </div>
-        <div>
-          <img src="assets/images/image 6.png" alt="backgroung plant" />
-          <img
-            src="assets/images/casual-life-3d-boy-sitting-at-the-desk-with-open-book 9.png"
-            alt="lying boy" />
-          <img src="assets/images/image 12.png" alt="frontend plant" />
-        </div>
-      </div>
-      d
+      </section>
     </main>
   </body>
 </html>
