section 3 html layout

--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
           </div>
         </div>
       </section>
+      <section>
+        <div>
+          <h2>Increase your vocabulary</h2>
+          <p>Traditional and new effective approaches to word study</p>
+          <a href="/">Textbook →</a>
+        </div>
+        <div>
+          <img src="assets/images/image 2.png" alt="girl holding book" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
