--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="assets/styles/normalize.css" />
-    <link rel="stylesheet" href="assets/styles/style.css" />
+    <link rel="stylesheet" href="assets/styles/main.css" />
   </head>
   <body>
     <header>
-      <span>GlobalTalk</span>
+      <span class="name">GlobalTalk</span>
+      <span>|</span>
+      <div>
+        <nav>
+          <ul>
+            <li>Main</li>
+            <li>Guide</li>
+            <li>Statistics</li>
+            <li>Games</li>
+            <li>About</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="button">
+        <button class="button login">Login</button>
+        <button class="button signup">Sign Up</button>
+      </div>
     </header>
-    <nav>
-      <div>
-        <ul>
-          <li>Main</li>
-          <li>Guide</li>
-          <li>statistics</li>
-          <li>Games</li>
-          <li>About</li>
-        </ul>
-      </div>
-      <div>
-        <button>Login</button>
-        <button>Sign Up</button>
-      </div>
-    </nav>
     <main>
       <section>
         <div>
@@ -49,9 +50,9 @@
             </div>
             <div>
               <img src="assets/images/Frame 35271.svg" alt="gaming joystick" />
-              <span>2</span>
+              <span>575k</span>
               <span>+</span>
-              <span>Mini-Game</span>
+              <span>Active Users</span>
             </div>
           </div>
           <div>
@@ -121,6 +122,7 @@
         <a href="/">Marcus</a>
       </div>
       <div>
+        <!-- Face icon? -->
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="31"
@@ -131,6 +133,7 @@
             d="M12.2615 15.7617C12.2615 16.8432 11.6981 18.613 10.3646 18.613C9.031 18.613 8.4676 16.8432 8.4676 15.7617C8.4676 14.6801 9.031 12.9104 10.3646 12.9104C11.6981 12.9104 12.2615 14.6801 12.2615 15.7617ZM27.4527 13.1484C27.4527 14.7992 27.2873 16.5483 26.5482 18.0645C24.5892 22.0284 19.2033 21.9352 15.3473 21.9352C11.4293 21.9352 5.72295 22.0749 3.68644 18.0645C2.93179 16.5638 2.64233 14.7992 2.64233 13.1484C2.64233 10.9802 3.3608 8.93093 4.7874 7.26982C4.51862 6.4522 4.3894 5.59318 4.3894 4.74452C4.3894 3.63193 4.64267 3.07305 5.14405 2.06396C7.48552 2.06396 8.98448 2.5297 10.7677 3.9269C12.2667 3.56983 13.807 3.40941 15.3525 3.40941C16.7481 3.40941 18.154 3.55948 19.5082 3.8855C21.2656 2.50382 22.7646 2.06396 25.0802 2.06396C25.5868 3.07305 25.8349 3.63193 25.8349 4.74452C25.8349 5.59318 25.7005 6.43668 25.4369 7.23877C26.8583 8.91541 27.4527 10.9802 27.4527 13.1484ZM24.1291 15.7617C24.1291 13.4899 22.7491 11.4873 20.3301 11.4873C19.3531 11.4873 18.4176 11.6632 17.4355 11.7978C16.6654 11.9168 15.8952 11.9634 15.1044 11.9634C14.3187 11.9634 13.5486 11.9168 12.7732 11.7978C11.8067 11.6632 10.8608 11.4873 9.87869 11.4873C7.45968 11.4873 6.0796 13.4899 6.0796 15.7617C6.0796 20.3052 10.2353 21.0038 13.8535 21.0038H16.3449C19.9786 21.0038 24.1291 20.3103 24.1291 15.7617ZM19.8597 12.9104C18.5261 12.9104 17.9627 14.6801 17.9627 15.7617C17.9627 16.8432 18.5261 18.613 19.8597 18.613C21.1933 18.613 21.7567 16.8432 21.7567 15.7617C21.7567 14.6801 21.1933 12.9104 19.8597 12.9104Z"
             fill="#BABABA" />
         </svg>
+        <!-- GitHub svg -->
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="31"
@@ -144,6 +147,7 @@
             d="M28.9968 6.53627C27.0514 6.47432 25.1618 6.43714 23.3279 6.42475V16.127H18.6812V6.42475C16.8349 6.43714 14.9515 6.47432 13.0308 6.53627V2.63306H28.9968V6.53627Z"
             fill="#BABABA" />
         </svg>
+        <!-- YouTube svg -->
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="31"
