linked font styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/styles/normalize.css" />
     <link rel="stylesheet" href="assets/styles/main.css" />
+    <link rel="stylesheet" href="assets/fonts/stylesheet-DelagothicOne.css" />
+    <link rel="stylesheet" href="assets/fonts/stylesheet-Montserrat.css" />
   </head>
   <body>
     <header>
@@ -23,7 +25,7 @@
         </nav>
       </div>
       <div class="button">
-        <button class="button login">Login</button>
+        <button class="button login">Login →</button>
         <button class="button signup">Sign Up</button>
       </div>
     </header>
