section 1 css in progress

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>GlobalTalk</title>
     <link rel="stylesheet" href="assets/styles/normalize.css" />
     <link rel="stylesheet" href="assets/styles/main.css" />
     <link rel="stylesheet" href="assets/fonts/stylesheet-DelagothicOne.css" />
     <link rel="stylesheet" href="assets/fonts/stylesheet-Montserrat.css" />
   </head>
+
   <body>
     <header>
       <span class="name">GlobalTalk</span>
-      <span>|</span>
+      <span class="divider">|</span>
       <div>
         <nav>
           <ul>
@@ -29,43 +30,50 @@
         <button class="button signup">Sign Up</button>
       </div>
     </header>
+
     <main>
-      <section>
-        <div>
-          <div>
+      <section class="section1">
+        <div class="column1">
+          <div class="infotext1">
             <span>E-COURSE PLATFORM</span>
-            <h1>Learning english online, made easy.</h1>
-            <p>
-              Practice your English and learn new things with the our platform
-            </p>
+            <h1>Learning and teaching online, made easy.</h1>
+            <p class="p1">Practice your English and learn new things with the our platform</p>
           </div>
-          <div>
-            <button>Sign in</button>
-            <a href="/">Learn more →</a>
+          <div class="button1">
+            <button class="button1 signin" >Sign in →</button>
+            <a href="/" class="button1 more">Learn more →</a>
           </div>
-          <div>
+          <div class="vectorimages">
             <div>
-              <img src="assets/images/Vector.svg" alt="lighting/svg" />
-              <span>600</span>
-              <span>+</span>
-              <span>Popular words</span>
+              <img class="vector" src="assets/images/Vector.svg" alt="lighting/svg" />
+              <span class="numbers">600</span>
+              <span class="plus">+</span>
+              <div>
+              <span class="text">Popular words</span>
+              </div>
             </div>
             <div>
-              <img src="assets/images/Frame 35271.svg" alt="gaming joystick" />
-              <span>575k</span>
-              <span>+</span>
-              <span>Active Users</span>
+              <img class="vector" src="assets/images/Frame 35271.svg" alt="gaming joystick" />
+              <span class="numbers">575k</span>
+              <span class="plus">+</span>
+              <div>
+              <span class="text">Active Users</span>
+              </div>
             </div>
           </div>
-          <div>
-            <img src="assets/images/image 6.png" alt="backgroung plant" />
-            <img
-              src="assets/images/casual-life-3d-boy-sitting-at-the-desk-with-open-book 9.png"
-              alt="lying boy" />
-            <img src="assets/images/image 12.png" alt="frontend plant" />
+        </div>
+
+          <div class="imagegroup1">
+            <div>
+              <img class="bplant" src="assets/images/image 6.png" alt="backgroung plant" />
+              <img class="boy" src="assets/images/casual-life-3d-boy-sitting-at-the-desk-with-open-book 9.png"
+                alt="lying boy" />
+              <img class="fplant" src="assets/images/image 12.png" alt="frontend plant" />
+            </div>
           </div>
         </div>
       </section>
+
       <section>
         <div>
           <img src="assets/images/image 8.png" alt="" />
@@ -87,6 +95,7 @@
           </div>
         </div>
       </section>
+
       <section>
         <div>
           <h2>Increase your vocabulary</h2>
